# Engine

./: .gitignore  CMakeLists.txt  README.md
shaders/: lamp.frag  lamp.vert  lighting.frag  lighting.vert
src/: camera.cpp  camera.hpp  main.cpp  shader_program.cpp  shader_program.hpp
